--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.83.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
